# calypso

./: .gitignore  CMakeLists.txt  TODO.list
examples/dynamo_benchmark/cuda/mpi_4/: control_MHD
examples/dynamo_benchmark/cuda/serial/: control_MHD  control_sph_shell
src/: CMakeLists.txt
src/Cuda_libraries/: CMakeLists.txt  Pws_l  Pws_l.cu  Pws_ver1  Pws_ver2.cu  cuda_optimizations.f90  debugFunctions.cu  gpuFunctions.cu  helper_cublas.h  helper_cuda.h  itr_3_transB_dydt.sass  legendre_poly.h  legendre_transform_cuda.f90  logger.cu  logger.h  matrixVectorMultiply.f90  set_vr_rtm_for_leg_cuda.f90  timer.cu  timer.h  transB_dydt.sass  transB_legacy_algorithms  transform_b.cu  transform_b.cu.bakup  transform_b.cubin  transform_f.cu  transform_f.cu.bakup  tuner.sh  utilities.cu
src/Cuda_libraries/benchmarks/: cacheProp.cu
src/Cuda_libraries/scripts/: breakdownLegTrans.cc  breakdownSHT.cc  cache.cu  cache.cubin  collectData.cc  control_MHD_template  control_sph_shell_template  hearRate.sh  run.sh
src/External_libs/: CMakeLists.txt
src/Fortran_libraries/: CMakeLists.txt
src/Fortran_libraries/MHD_src/IO/: init_sph_MHD_elapsed_label.f90  m_ctl_data_mhd_evo_scheme.f90
src/Fortran_libraries/MHD_src/sph_MHD/: set_control_sph_data_MHD.f90  sph_trans_w_coriols.f90  sph_transforms_4_MHD.f90
src/Fortran_libraries/PARALLEL_src/: CMakeLists.txt
src/Fortran_libraries/PARALLEL_src/COMM_src/: m_work_time.f90
src/Fortran_libraries/PARALLEL_src/SPH_SHELL_src/: legendre_bwd_trans_org.f90  legendre_fwd_sym_matmul.f90  legendre_fwd_trans_org.f90  legendre_fwd_trans_org.f90.bakup  legendre_transform_gpu.cu  legendre_transform_gpu.h  legendre_transform_matmul.f90  legendre_transform_select.f90
src/cmake/Modules/: FindFFTW.cmake
src/programs/SPH_MHD/: SPH_analyzer_MHD.f90  analyzer_sph_MHD_w_psf.f90  main_sph_MHD_w_psf.f90
